--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <h2>Contact  koditax solutions limited</h2>
           <p>
             📍 Information House, Opposite Quickmart Supermarket, Mfangano Street<br>
-            📞 Phone / WhatsApp: <strong>0711 875 699</strong><br>
+            📞 Phone / WhatsApp: <strong>0717198102</strong><br>
             📧 Email: steadyjosem@gmail.com<br>
             🌐 www.kenyadigitchexperts.com
           </p>
@@ -239,3 +239,4 @@
 
 </body>
 </html>
+
