--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             📍 Information House, Opposite Quickmart Supermarket, Mfangano Street<br>
             📞 Phone / WhatsApp: <strong>0717198102</strong><br>
             📧 Email: steadyjosem@gmail.com<br>
-            🌐 www.kenyadigitchexperts.com
+            🌐 www.koditaxsolutions.co.ke
           </p>
         </div>
 
@@ -239,4 +239,5 @@
 
 </body>
 </html>
+
 
