--- a/contact.html
+++ b/contact.html
@@ -66,10 +66,10 @@
 
           <ul class="contact-info">
             <li><i class="fa fa-map-marker"></i> Information House, Opposite Quickmart Supermarket, Mfangano Street</li>
-            <li><i class="fa fa-phone"></i>0717198102</li>
-            <li><i class="fa fa-whatsapp"></i> <a href="https://wa.me/254711875699" target="_blank">Chat on WhatsApp</a></li>
+            <li><i class="fa fa-phone"></i>0717 198 102 </li>
+            <li><i class="fa fa-whatsapp"></i> <a href="https://wa.me/254717198102" target="_blank">Chat on WhatsApp</a></li>
             <li><i class="fa fa-envelope"></i> steadyjosem@gmail.com</li>
-            <li><i class="fa fa-globe"></i>koditaxsolutionsltd.co.ke</li>
+            <li><i class="fa fa-globe"></i> www.kenyadigitchexperts.com</li>
           </ul>
         </div>
 
@@ -145,4 +145,3 @@
 
 </body>
 </html>
-
