--- a/index.html
+++ b/index.html
@@ -170,9 +170,14 @@
           <h2>Contact  koditax solutions limited</h2>
           <p>
             📍 Information House, Opposite Quickmart Supermarket, Mfangano Street<br>
-            📞 Phone / WhatsApp: <strong>0717198102</strong><br>
-            📧 Email: steadyjosem@gmail.com<br>
-            🌐 www.koditaxsolutions.co.ke
+           Phone / WhatsApp:
+<strong>
+  <i class="fa fa-phone"></i> 0717 198 102 <br>
+  <a href="https://wa.me/254717198102" target="_blank">
+    <i class="fa fa-whatsapp"></i> Chat on WhatsApp
+  </a>
+</strong><br>
+            🌐 www.kenyadigitchexperts.com
           </p>
         </div>
 
@@ -239,5 +244,3 @@
 
 </body>
 </html>
-
-
