--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
       <nav class="main-nav">
         <a href="index.html" class="logo">
-          <h4>koditax<span>Solutions<span>Limited</span></h4>
+          <h4>koditax<span>Solutions LTD</span></h4>
         </a>
 
         <ul class="nav">
@@ -172,7 +172,7 @@
             📍 Information House, Opposite Quickmart Supermarket, Mfangano Street<br>
            Phone / WhatsApp:
 <strong>
-  <i class="fa fa-phone"></i> 0717 198 102 <br>
+  <i class="fa fa-phone"></i> 0717 198 102 
   <a href="https://wa.me/254717198102" target="_blank">
     <i class="fa fa-whatsapp"></i> Chat on WhatsApp
   </a>
