--- a/contact.html
+++ b/contact.html
@@ -25,30 +25,29 @@
 <body>
 
   <!-- Header -->
-  <header class="header-area header-sticky">
+  <header class="header-area header-sticky wow slideInDown">
     <div class="container">
       <nav class="main-nav">
         <a href="index.html" class="logo">
-          <h4>Kenya<span>Digitech</span></h4>
+          <h4>koditax<span>Solutions LTD</span></h4>
         </a>
 
         <ul class="nav">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="contact.html" class="active">Contact Us</a></li>
+          <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
+          <li class="scroll-to-section"><a href="index.html#about">About Us</a></li>
+          <li class="scroll-to-section"><a href="index.html#services">KRA Services</a></li>
+          <li class="scroll-to-section"><a href="#top">Contact</a></li>
+          <li class="scroll-to-section">
+            <div class="main-red-button">
+              <a href="#contact">Get Tax Help Now</a>
+            </div>
+          </li>
         </ul>
 
-        <a class="menu-trigger"><span>Menu</span></a>
+        <a class='menu-trigger'><span>Menu</span></a>
       </nav>
     </div>
   </header>
-
-  <!-- Page Heading -->
-  <div class="page-heading">
-    <div class="container">
-      <h2>Contact  koditax solutions limited</h2>
-      <p>We are here to help you with all KRA iTax services</p>
-    </div>
-  </div>
 
   <!-- Contact Section -->
   <div class="contact-us section">
