--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <div class="container">
       <nav class="main-nav">
         <a href="index.html" class="logo">
-          <h4>koditax<span>Solutions LTD</span></h4>
+          <h4>koditax<span>Solutions</span></h4>
         </a>
 
         <ul class="nav">
@@ -144,3 +144,4 @@
 
 </body>
 </html>
+
