--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
       <nav class="main-nav">
         <a href="index.html" class="logo">
-          <h4>koditax<span>Solutions LTD</span></h4>
+          <h4>koditax<span>Solutions</span></h4>
         </a>
 
         <ul class="nav">
@@ -244,3 +244,4 @@
 
 </body>
 </html>
+
